# tauri-app

./: .yarnrc  README.md  index.html  mermaid.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  文件相似度对比_new.md  文件相似度对比_old.md
docs/: sql.md  收藏夹管理.md
src/: App.tsx  Router.tsx  about.tsx  global.d.ts  main.tsx  style.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json  tauri.db
src-tauri/icons/: icon.icns
src-tauri/src/: event_loop.rs  main.rs
src-tauri/src/common/: mod.rs
src-tauri/src/common/sqlite/: mod.rs  rusqlite_utils.rs
src-tauri/src/common/sqlite/migration/: database_version.rs  mod.rs
src-tauri/src/event_loop/: mod.rs
src-tauri/src/files/: file_sqlite3.rs  file_struct.rs  file_tools.rs  mod.rs
src-tauri/src/menus/: default.rs  event.rs  mod.rs
src-tauri/src/self_plugin/: mod.rs
src-tauri/src/self_plugin/tauri_plugin_file/: files.rs  mod.rs
src-tauri/src/self_plugin/tauri_plugin_sqlite/: mod.rs  sqlite.rs
src-tauri/src/servics/: mod.rs
src-tauri/src/servics/files_servics/: file_sqlite3.rs  file_struct.rs  files_servics.rs  migrations.rs  mod.rs  modCopy
src-tauri/src/utils/: mod.rs
src/components/Layout/: Layout.module.less  Layout.tsx  breadcrumbManage.tsx
src/components/Menu/: Menu.module.less  Menu.tsx
src/components/Table/: CopyText.tsx  FileTable.tsx
src/config/: file.ts  index.ts  time.ts
src/databases/: addFiledInTable.ts  createTableSql.ts  index.ts
src/databases/files/: sql.ts
src/pages/About/: About.tsx
src/pages/Bookmarks/: List.tsx
src/pages/Chat/: Chat.module.less  Chat.tsx
src/pages/DuplicateFile/: CalculateDuplicateFiles.module.less  CalculateDuplicateFiles.tsx  CalculateListPage.module.less  CalculateListPage.tsx  DuplicateFile.module.less  DuplicateFile.tsx  DuplicateFileCopy  FileInfoEditer.module.less  FileInfoEditer.tsx  FilesManage.tsx  Index.tsx  ManageDuplicateFiles.module.less  ManageDuplicateFiles.tsx  config.ts
src/pages/FileClear/: FileClear.module.less  FileClear.tsx
src/pages/FileSort/: FileSort.module.less  FileSort.tsx
src/pages/Finder/: Finder.tsx
src/pages/Home/: Home.tsx
src/pages/Setting/: Setting.tsx
src/plugins/tauri-plugin-file/: file.ts
src/plugins/tauri-plugin-sqlite/: sqlite.ts
src/services/: chat-service.ts  file-service.ts  index.ts
src/types/: files.d.ts  table.d.ts
src/utils/: commons.tsx  index.tsx  request.tsx
