[package]
name = "tauri-app"
version = "0.0.1"
description = "A System Tools Tauri App"
authors = ["Johnhong9527"]
license = ""
repository = "https://github.com/Johnhong9527/tauri-app.git"
edition = "2021"
rust-version = "1.78.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://docs.rs/tensorflow/0.19.1/tensorflow/

[build-dependencies]
tauri-build = {version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0.117"
rusqlite = {version = "0.29.0", features = ["bundled"] }
thiserror = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.5.2", features = ["api-all"] }
uuid = "1.8.0"
regex = "1.10.4"
sha2 = "0.10.8"
hex = "0.4.3"
anyhow = "1"
async-trait = "0.1.80"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
lazy_static = "1.4.0"
home = "0.5.9"
trash = "1.3"

[dependencies.tauri-plugin-sql]
git = "https://gitee.com/seamong/plugins-workspace"
branch = "v1"
features = ["sqlite"] # or "postgres", or "mysql"

[dependencies.tauri-plugin-persisted-scope]
git = "https://gitee.com/seamong/plugins-workspace"
branch = "v1"

[workspace]
#members = ["modules"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
